# pravaham

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  async-run.sh  benchmark_sse.sh  docker-compose.yaml  docker-entrypoint.sh  env.example  env.kamal.example  gunicorn.conf.py  manage.py  pyproject.toml  uvicorn.conf.py
.kamal/: secrets
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
commons/: db_mixins.py
kamal/: Notes.md
kamal/accessories/config/: deploy.yml
kamal/async-app/config/: deploy.yml
kamal/sync-app/config/: deploy.yml
nginx_revproxy/: Dockerfile  default.conf
posts/: async_urls.py  async_views.py  constants.py  data.py  external.py  external_async.py  models.py  publisher.py  sync_views.py  urls.py  urls_async.py  urls_sync.py  utils.py  views.py  views_async.py  views_sync.py
posts/migrations/: 0001_initial.py
pravaham/: asgi.py  settings.py  views.py  wsgi.py
pravaham/settings/: async_base.py  base.py
pravaham/urls/: async_urls.py  sync_urls.py
realtime/: apps.py  external.py  live_qa.py  sync_views.py  urls.py  views.py
realtime/management/commands/: get_mastodon_feed.py
static/css/: mastodon.css  style.css
templates/: base.html
templates/accounts/: login.html  logout.html  register.html
templates/posts/: content_htmx.html  create.html  lobby.html  new_posts.html  stream.html
templates/realtime/: content.html  new_posts.html
templates/realtime/live_qa/: base.html  create.html  new_questions.html  questions.html  start.html
