[tool.poetry]
name = "pravaham"
version = "0.1.0"
description = "Stream of posts"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
Django = {version = "5.0b1", allow-prereleases = true}
uvicorn = "0.22"
django-htmx = "^1.17.0"
redis = "^5.0.1"
django-configurations = "^2.5"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.0"
httpx = "^0.25.1"
httpx-sse = "^0.3.1"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.6.0"
ruff = "^0.1.3"
isort = "^5.12.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.isort]
line_length = 120
atomic = true
profile = "black"
known_django = "django"
known_configs = "pravaham"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "CONFIGS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
length_sort = true
skip = "venv/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
